--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -22,7 +22,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://ai-public.creatie.ai/gen_page/tailwind-custom.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
 
 <!-- End  -->
@@ -30,8 +32,9 @@
     body {
       background-color: #e3e3e3;
     margin: 0;
-    font-family: "work";
+    font-family:Georgia, 'Times New Roman', Times, serif;
     }
+
     .header {
       width: 100%;
       background: #ffffff;
@@ -436,7 +439,11 @@
 .product-card:hover img {
     transform: scale(1.1);
 }
-
+.product-card h3{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+  font-weight: 500;
+  font-size: 20px;
+}
 .categories {
     margin: 20px;
 }
@@ -470,13 +477,13 @@
     transition: transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1), box-shadow 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 .category-card h3{
-  font-size: 25px;
+  font-size: 22px;
   font-family:'Times New Roman', Times, serif;
   margin-bottom: 5px;
-  font-weight:500;
+  font-weight:600;
 }
 .category-card p{
-  font-size: 15px;
+  font-size: 18px;
   margin-top: 10px;
 }
 .category-card:hover {
@@ -562,6 +569,7 @@
     box-shadow: 0 2px 4px rgba(62, 74, 230, 0.466);
     padding: 20px;
     width: 30%;
+    margin-bottom: -17px;
     transition: transform 0.2s;
 }
 
@@ -586,7 +594,7 @@
 }
 
 .kit-text li {
-    font-size: 17px;
+    font-size: 20px;
     color: #333;
     margin-bottom: 5px;
 }
@@ -753,6 +761,18 @@ footer {
 }
 .dark-mode .nested-dropdown{
   background-color: #222;
+}
+.dark-mode .sidebar h2 {
+  color: white;
+}
+.dark-mode .sidebar li {
+  color: white;
+}
+.dark-mode .sidebar ul li a{
+  color:white;
+}
+.dark-mode .sidebar ul li a:hover{
+  color:rgb(76, 0, 255);
 }
   </style>
   {% block css %}{% endblock %}
