--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -36,18 +36,19 @@
       </div>
       <div class="swiper-slide">
         <img src="{% static 'images/hero2.webp' %}" alt="Robotics Kit 2">
-        <div class="overlay">
+        <!--<div class="overlay">
           <h2>Its all in the timing</h2>
           <p>Experience the future!</p>
         </div>
+      -->
       </div>
       <div class="swiper-slide">
         <img src="{% static 'images/hero3.webp' %}" alt="Robotics Kit 3">
         <div class="shadow-box"></div>
-        <div class="overlay">
+        <!--<div class="overlay">
           <h2>DIY Robot Kit</h2>
           <p>Build & code your robot!</p>
-        </div>
+        </div>-->
       </div>
     </div>
     <!-- Pagination Bullets -->
@@ -206,21 +207,21 @@
     <div class="product-grid">
         <div class="product-card">
             <a href = "/otto"><img src="{% static 'images/product1.jpg' %}" alt="Ottobot"></a>
-            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Ottobot</h3>
+            <h3>Ottobot</h3>
         </div>
         <div class="product-card">
             <img src="{% static 'images/product2.jpg' %}" alt="Bionic Hand">
-            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Bionic Hand</h3>
+            <h3>Bionic Hand</h3>
             
         </div>
         <div class="product-card">
             <img src="{% static 'images/product3.jpg' %}" alt="Product 3">
-            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Solar detector</h3>
+            <h3>Solar detector</h3>
             
         </div>
         <div class="product-card">
             <img src="{% static 'images/product4.jpg' %}" alt="Product 4">
-            <h3 style = "font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight:500;">Asterbot</h3>
+            <h3>Asterbot</h3>
             
         </div>
     </div>
